@@ -4,34 +4,35 @@ import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.model.Warehouse;
 import com.example.demo.repository.WarehouseRepository;
 import com.example.demo.service.WarehouseService;
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+
 import java.time.LocalDateTime;
 import java.util.List;
 
 @Service
-@RequiredArgsConstructor
 public class WarehouseServiceImpl implements WarehouseService {
+
     private final WarehouseRepository warehouseRepository;
+
+    public WarehouseServiceImpl(WarehouseRepository warehouseRepository) {
+        this.warehouseRepository = warehouseRepository;
+    }
 
     @Override
     public Warehouse createWarehouse(Warehouse warehouse) {
-        if (warehouse.getLocation() == null || warehouse.getLocation().trim().isEmpty()) {
-            throw new IllegalArgumentException("Location must not be empty");
+        if (warehouse.getLocation() == null || warehouse.getLocation().isBlank()) {
+            throw new IllegalArgumentException("location cannot be empty");
         }
-        if (warehouseRepository.findByWarehouseName(warehouse.getWarehouseName()).isPresent()) {
-            throw new IllegalArgumentException("Warehouse name already exists");
-        }
-        if (warehouse.getCreatedAt() == null) {
-            warehouse.setCreatedAt(LocalDateTime.now());
-        }
+
+        warehouse.setCreatedAt(LocalDateTime.now());
         return warehouseRepository.save(warehouse);
     }
 
     @Override
     public Warehouse getWarehouse(Long id) {
         return warehouseRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Warehouse not found"));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Warehouse not found"));
     }
 
     @Override
